# test-task

./: Dockerfile  main.py  pyproject.toml
src/: bot.py  config.py
src/database/dto/: salary.py
src/database/repositories/: base.py  salary.py
src/handlers/: main.py
src/usecases/salaries/: payments.py
src/utils/salaries/: payments.py
