[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Snayt1k3 <snayt1k3twitch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
motor = "^3.3.2"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
